fix: webkit overflow with intro

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -10,6 +10,7 @@ body {
 
 body,
 html {
+  position: relative;
   overflow-x: hidden;
 }
 
